change small spacing issues with section headers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,7 @@ footer a{
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
+    padding-top: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
